pythonFiles/tests/testing_tools/adapter/.data/syntax-error/tests/test_spam.py

def test_simple():
    pass


# A syntax error:
:
